kubernetes/api/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - port: 80
    name: 'http'
    targetPort: 3000
